added decimal point button and restyled equals button

--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
         <div class="row">
             <button class="button" type="button">clear</button>
             <button class="button" type="button">0</button>
-            <button class="button" type="button">=</button>
+            <button class="button" type="button">.</button>
             <button class="button" type="button">/</button>
+        </div>
+        <div>
+            <button class="button equals" type="button">=</button>
         </div>
         </div>
 
